Trying to fix some issues with the Flexbox on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -532,11 +532,11 @@ h3 {
 }
 
 .icons {
-  margin-left: 20px;
+  margin-left: 30px;
 }
 
 .fb-card {
-  margin-left: 20px;
+  margin-left: 16px;
 }
 
 
